# Design-and-Validation-of-a-Low-Cost-Single-Hip-Delayed-Output-Feedback-Control-Framework

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
apps/: parameter_sweep.cpp  simulate_dofc.cpp
docs/: architecture_zh.md  control_theory_zh.md  github_debugging_zh.md
include/dofc/control/: DofcController.hpp
include/dofc/core/: DelayBuffer.hpp  MotionStateDetector.hpp  SafetyLimiter.hpp
include/dofc/estimation/: SeriesElasticEstimator.hpp
include/dofc/io/: CsvLogger.hpp
include/dofc/model/: SingleHipModel.hpp
src/control/: DofcController.cpp
src/core/: DelayBuffer.cpp  MotionStateDetector.cpp  SafetyLimiter.cpp
src/estimation/: SeriesElasticEstimator.cpp
src/io/: CsvLogger.cpp
src/model/: SingleHipModel.cpp
tests/: test_delay_buffer.cpp  test_dofc_controller.cpp  test_full_scale_model.cpp  test_harness.hpp  test_main.cpp  test_safety_limiter.cpp  test_series_elastic_estimator.cpp
tools/: plot_results.py
